correcoes feitas no codigo

--- a/pratica_css.html
+++ b/pratica_css.html
@@ -14,9 +14,8 @@
 
 	<div class="card border">
 
-			<div class="icone1 border"></div>
+		<div class="icone1 border"></div>
 		
-
 		<div>
 			<h1 class="text title">
 				Meu nome é: <span class="main-color">Adriana</span>
@@ -29,12 +28,10 @@
 
 	</div>
 
-	<div class="card">
+	<div class="card border">
 
-		<div class="border">
-			<div class="icone2 border"></div>
-		</div>
-
+		<div class="icone2 border"></div>
+		
 		<div>
 			<h1 class="text title">
 				Meu nome é: <span class="main-color">Hugo</span>
